infra/k8s/notification-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-worker
  namespace: medibox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-worker
  template:
    metadata:
      labels:
        app: notification-worker
    spec:
      containers:
        - name: notification-worker
          image: medibox-notification-worker:local
          imagePullPolicy: IfNotPresent
